# bank-marketing-e2e-model

./: .env  .gitignore  Dockerfile  README.md  compose.yaml  config.yaml  pyproject.toml  requirements.txt  requirements_.txt
bank-marketing-e2e-model/notebooks/: data_exploration.ipynb  testing.ipynb
bank-marketing-e2e-model/notebooks/.ipynb_checkpoints/: data_exploration-checkpoint.ipynb
bank-marketing-e2e-model/src/data/: raw_data_gen.py
bank_marketing_e2e_model/: .pylintrc  config.yaml  main.py
bank_marketing_e2e_model/app/: app_input_schema.json
bank_marketing_e2e_model/data/: raw_training_data.csv  test.csv  train.csv
bank_marketing_e2e_model/models/model/: log_reg_pipeline.joblib  model_pipeline.joblib
bank_marketing_e2e_model/models/model_performance/: model_metrics.json
bank_marketing_e2e_model/notebooks/: data_exploration.ipynb
bank_marketing_e2e_model/src/data/: raw_data_gen.py
bank_marketing_e2e_model/src/modelling/: model_evaluation.py  model_training.py
bank_marketing_e2e_model/src/utils/: utils.py
bank_marketing_e2e_model/tests/: model_unit_test.py  web_page_unit_test.py
