[tool.poetry]
name = "bank-marketing-e2e-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">= 3.11, < 3.13"
mypy = "^1.6.1"
pylint = "^3.0.2"
jupyter = "^1.0.0"
ucimlrepo = "^0.0.3"
missingno = "^0.5.2"
scikit-learn = "^1.3.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.1"
numpy = "^1.26.1"
pandas = "^2.1.2"
python-dotenv = "^1.0.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
